# clibrowser

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
cliformsoffice/: Cargo.toml
cliformsoffice/src/: cli.rs  error.rs  format.rs  main.rs  output.rs
cliformsoffice/src/commands/: add_image.rs  add_section.rs  add_table.rs  add_text.rs  batch.rs  cells.rs  comments.rs  convert.rs  create.rs  diff.rs  extract.rs  fill_template.rs  formulas.rs  headers_footers.rs  images.rs  info.rs  links.rs  markdown.rs  merge.rs  mod.rs  pages.rs  pipe.rs  protect.rs  query.rs  redact.rs  remove.rs  replace.rs  rotate.rs  schema.rs  search.rs  split.rs  stats.rs  styles.rs  summary.rs  tables.rs  text.rs  toc.rs  validate.rs  watermark.rs  write_cmd.rs
cliformsoffice/src/formats/: docx.rs  mod.rs  pdf.rs  pptx.rs  xlsx.rs
cliformsoffice/src/models/: mod.rs
cligit/: Cargo.toml
cligit/src/: cli.rs  detect.rs  error.rs  git_ctx.rs  git_shell.rs  main.rs  output.rs
cligit/src/commands/: analyze.rs  blame.rs  branch.rs  branches.rs  cat.rs  changes.rs  checkout.rs  cherry_pick.rs  clone_cmd.rs  commit.rs  config.rs  conflicts.rs  context.rs  contributors.rs  deps.rs  diff.rs  fetch.rs  files.rs  find.rs  history.rs  languages.rs  log.rs  merge.rs  mod.rs  pr_diff.rs  pull.rs  push.rs  rebase.rs  remotes.rs  reset.rs  search.rs  show.rs  stage.rs  stash.rs  stashes.rs  status.rs  summary.rs  tag.rs  tags.rs  tree.rs  (+1 more)
cligit/src/models/: mod.rs
src/: cli.rs  dom.rs  error.rs  http.rs  main.rs  output.rs  session.rs
src/commands/: auth.rs  click.rs  cookies.rs  crawl.rs  forms.rs  headers.rs  links.rs  markdown.rs  mod.rs  navigate.rs  pipe.rs  rss.rs  search.rs  select.rs  session_cmd.rs  sitemap.rs  status.rs  tables.rs  text.rs  webmcp.rs
